force-app/main/default/objects/LLC_BI__Dimension_Range__c/fields/LLC_BI__Maximum_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum_Inclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this required checkbox field to indicate that a range is inclusive of this maximum value. By default, the value is false.</description>
    <inlineHelpText>Select the checkbox to indicate that this range is inclusive of this maximum value.</inlineHelpText>
    <label>Maximum Inclusive</label>
    <type>Checkbox</type>
</CustomField>